crates/core/tests/snapshots/tools__tool_defs.snap
---
source: crates/core/tests/tools.rs
expression: defs
---
[
  {
    "name": "grep",
    "description": "Mock tool grep.",
    "input_schema": {
      "additionalProperties": false,
      "properties": {
        "n": {
          "minimum": 0,
          "type": "integer"
        },
        "path": {
          "minLength": 1,
          "type": "string"
        }
      },
      "required": [
        "path"
      ],
      "type": "object"
    }
  },
  {
    "name": "read_file",
    "description": "Mock tool read_file.",
    "input_schema": {
      "additionalProperties": false,
      "properties": {
        "n": {
          "minimum": 0,
          "type": "integer"
        },
        "path": {
          "minLength": 1,
          "type": "string"
        }
      },
      "required": [
        "path"
      ],
      "type": "object"
    }
  },
  {
    "name": "shell",
    "description": "Mock tool shell.",
    "input_schema": {
      "additionalProperties": false,
      "properties": {
        "n": {
          "minimum": 0,
          "type": "integer"
        },
        "path": {
          "minLength": 1,
          "type": "string"
        }
      },
      "required": [
        "path"
      ],
      "type": "object"
    }
  },
  {
    "name": "write_file",
    "description": "Mock tool write_file.",
    "input_schema": {
      "additionalProperties": false,
      "properties": {
        "n": {
          "minimum": 0,
          "type": "integer"
        },
        "path": {
          "minLength": 1,
          "type": "string"
        }
      },
      "required": [
        "path"
      ],
      "type": "object"
    }
  }
]
